<resources>
    <string name="app_name">Teste Sicredi</string>

<!--    Splashscreen-->
    <string name="splashscreen_text_title_first">Teste</string>
    <string name="splashscreen_text_title_second">Sicredi</string>

<!--    Events Fragment-->
    <string name="events_fragment_text_title_screen">Eventos</string>

<!--    Details Fragment-->
    <string name="details_fragment_text_title_screen">Sobre o evento</string>
    <string name="details_fragment_text_title_localization">Localização</string>
    <string name="details_fragment_text_address">Endereço: %s</string>
    <string name="details_fragment_text_price">Preço: %s</string>
    <string name="details_fragment_text_date">Data: %s</string>
    <string name="details_event_fragment_text_button_check_in">Check-in</string>
    <string name="details_event_fragment_text_button_share">Compartilhar</string>

<!--    Error messages -->
    <string name="text_error_message_error_find_address">Erro ao encontrar endereço</string>
    <string name="preference_text_title">Selecione o tema</string>


    <string name="preference_theme_system_default">Padrão do sistema</string>
    <string name="preference_theme_light">Claro</string>
    <string name="preference_theme_dark">Escuro</string>
    <string name="preference_theme_key">THEME_PREFERENCE</string>


    <string name="errors_generic">Ops, algo deu errado.</string>
    <string name="errors_no_connection">Sem conexão</string>
    <string name="errors_session_expired">Sessão expirada</string>


    <string name="buttons_default_ok">OK</string>
    <string name="dialog_checkin_text_title">Fazer check-in</string>
    <string name="dialog_checkin_input_hint_name">Name</string>
    <string name="dialog_checkin_input_hint_email">E-mail</string>

    <string-array name="preference_theme_entries">
        <item>@string/preference_theme_system_default</item>
        <item>@string/preference_theme_light</item>
        <item>@string/preference_theme_dark</item>
    </string-array>
    <string-array name="preference_theme_values">
        <item>auto</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

</resources>