...
        android:text="@string/dialog_checkin_text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_checkin_input_hint_name"
        android:imeOptions="actionNext"
...
        android:textSize="@dimen/size_text_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginTop="8dp"
        android:hint="@string/dialog_checkin_input_hint_email"
        android:imeOptions="actionDone"
...
