...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_localization_title"
                tools:text="Endereço: Rua Yemen, 15 - Yemen" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_checkin"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_gradient"
...
